Bug #24668 - Request boxes too big.
--HG--
branch : Release 7.4.388

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -129,7 +129,8 @@
 }
 
 .request-data-subject {
-	word-wrap: break-word;	
+	word-wrap: break-word;
+	margin: 0 0 5px 0;
 }
 .request-data-text {
 	word-wrap: break-word;	
